# OpenLipi

./: .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  build-mac.sh  config.json.example  main.rs
docs/schema/: layout.json
layouts/telugu/: apple.json
macos-app/: Info.plist  OpenLipiMenuBar.swift  README.md  make_icons.swift
src/: README.md  config.rs  engine.rs  handler.rs  keyboard.rs  main.rs  state.rs
